--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <h1>My Memories</h1>
     <div class="container">
+        <p>My family is the most important thing in my life. I do it all for them!</p>
         <div class="row">
             <!-- 1 -->
             <div class="col-md-4"> <!-- /col-md-4 -->
